# cryptotracker-cli

./: Cargo.toml  README.md
src/: api.rs  cli.rs  main.rs  utils.rs
src/api/: apis_models.rs  liquid.rs  mexc.rs
src/api/apis_models/: dydx.rs  mexc.rs
src/cli/: args.rs  get_query.rs  handle_query.rs
