[package]
name = "crypto-prices"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.63"
clap = { version = "4.1.4", features = ["derive"] }
regex = "1.7.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
url = "2.3.1"
